cabal-version:      3.4
name:               sync-monad
version:            0.1.0.0
synopsis:           A monad for communication protocols
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             ryndubei
maintainer:         114586905+ryndubei@users.noreply.github.com
-- copyright:
category:           Control
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Control.Monad.Sync
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.14.0.0
                    , singletons
    hs-source-dirs:   src
    default-language: Haskell2010
