cabal-version:      3.0
name:               sync-monad
version:            0.1.0.0
synopsis:           A monad for communication protocols
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             ryndubei
maintainer:         114586905+ryndubei@users.noreply.github.com
-- copyright:
category:           Control
build-type:         Simple
tested-with:        GHC==8.10.7
extra-doc-files:    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Control.Monad.Sync
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>= 4.13.0.0 || ^>=4.14.0.0
                    , free
                    , singletons
    hs-source-dirs:   src
    default-language: Haskell2010

executable diffie-hellman
    import:           warnings
    hs-source-dirs:   examples
    main-is:          DiffieHellman.hs
    build-depends:    base
                    , async >= 2.0.0.0
                    , crypton
                    , singletons
                    , stm
                    , sync-monad
                    , transformers
    default-language: Haskell2010

executable voidm-example
    import:           warnings
    hs-source-dirs:   examples
    main-is:          VoidM.hs
    build-depends:    base
                    , singletons
                    , sync-monad
                    , transformers
    default-language: Haskell2010
